--- a/views/categoriescreate.ejs
+++ b/views/categoriescreate.ejs
@@ -847,7 +847,7 @@
        ***************** Start Of Running Functions ********************
        ****************************************************************/
       // the following line is set by NodeJS when requesting the site
-      var vGameID = "<%=gameID%>"
+      var vGameID = "<%=gameID%>";
       var vDataURL = "<%=dataURL%>";
       var createRoot = document.getElementById("categories");
 
