--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -18,7 +18,7 @@
               <a class="nav-link" href="/">Home Page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dailyscripture/day/:Today">Daily Scripture</a>
+              <a class="nav-link" href="/blog/entry/:New">New Blog Entry</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/categories">Categories Game List</a>
