--- a/views/blogview.ejs
+++ b/views/blogview.ejs
@@ -48,7 +48,13 @@
     <%- include('./partials/footer.ejs') %>
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
     <script>
-      const blogEntry = "<%-blogContent%>";
+      const blogEntry = "<%=blogContent%>";
+
+      function decodeHtml(html) {
+        var txt = document.createElement("textarea");
+        txt.innerHTML = html;
+        return txt.value;
+      }
 
       var quill = new Quill('#editor', {
         theme: 'snow',
@@ -58,7 +64,7 @@
         }
       });
 
-      quill.pasteHTML(blogEntry);
+      quill.pasteHTML(decodeHtml(blogEntry));
 
     </script>
     <%- include('./partials/body-script.ejs') %>
