--- a/views/blogview.ejs
+++ b/views/blogview.ejs
@@ -22,11 +22,8 @@
         opacity: 0.20; /* Adjust the value as needed */
         z-index: -1; /* Ensure it stays behind other content */
       }
-      .blog-title {
-        font-size: 2rem;
-        font-weight: bold;
-        margin-top: 2rem;
-        margin-bottom: 1rem;
+      .ql-container {
+          border: none!important; 
       }
       .blog-content {
         margin-top: 2rem;
@@ -39,16 +36,33 @@
   <body>
     <%- include('./partials/nav.ejs') %>
     <div class="container align-content-center justify-content-center mt-5" style="max-width: 1000px;">
-      <div class="text-center blog-title"><%= blogTitle %></div>
-      <div class="text-center blog-user"><%= blogUserName %></div>
-
-      <div id="editor" class="blog-content"></div>
+      <div class="row">
+        <div class="text-center h1"><%=blogData.title%></div>
+      </div>
+      <div class="row">
+          <div class="text-center">by: <%=blogData.username %></div>
+      </div>
+      <div class="row mx-auto <%=blogEditHide%>">
+        <div class="col mx-auto text-center <%=blogEditHide%>">
+          <button type="button" class="btn btn-primary <%=blogEditHide%>" onclick="editBlog()">Edit</button>
+        </div>
+      </div>
+      <div class="row">
+        <div id="editor" class="blog-content"></div>
+      </div>
     </div>
 
     <%- include('./partials/footer.ejs') %>
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
     <script>
-      const blogEntry = "<%=blogContent%>";
+      const blogContent = "<%=blogData.content%>";
+      const blogEditUrl = "<%=blogEditUrl%>";
+
+      function editBlog(){
+        if ( blogEditUrl && blogEditUrl != "" ){
+          window.location.href = blogEditUrl;
+        }
+      }
 
       function decodeHtml(html) {
         var txt = document.createElement("textarea");
@@ -64,7 +78,7 @@
         }
       });
 
-      quill.pasteHTML(decodeHtml(blogEntry));
+      quill.pasteHTML(decodeHtml(blogContent));
 
     </script>
     <%- include('./partials/body-script.ejs') %>
