--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -18,6 +18,9 @@
               <a class="nav-link" href="/">Home Page</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/dailyscripture/view/:Today">Daily Scripture</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/blogs">Blogs</a>
             </li>
             <li class="nav-item">
