Updating various forms to 'look' nicer in appearance or be more easily readable in given situations (based upon some feedback from a sister to improve readability)

--- a/views/categorieslist.ejs
+++ b/views/categorieslist.ejs
@@ -9,7 +9,7 @@
       }
       body::before {
         content: "";
-        position: absolute;
+        position: fixed;
         top: 0%;
         left: 0%;
         width: 100%;
@@ -17,7 +17,7 @@
         background: url('/images/familytime.svg') no-repeat;
         background-size: cover;
         background-position: center 33%; /* Adjust the vertical alignment */
-        opacity: 0.33; /* Adjust the value as needed */
+        opacity: 0.2; /* Adjust the value as needed */
         z-index: -1; /* Ensure it stays behind other content */
       }
     </style>     
