--- a/views/blogentry.ejs
+++ b/views/blogentry.ejs
@@ -14,12 +14,9 @@
         border-left: 3px solid #007bff!important; /* Left border: 5px thick, solid black */
         border-right: 3px solid #007bff!important; /* Right border: 5px thick, solid black */
       }
-      body {
-        background-color: #f5efe6;
-      }
       body::before {
         content: "";
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
@@ -27,8 +24,17 @@
         background: url('/images/blogentry.svg') no-repeat;
         background-size: cover;
         background-position: center 33%;
-        opacity: 0.20; /* Adjust the value as needed */
+        opacity: 0.10; /* Adjust the value as needed */
         z-index: -1; /* Ensure it stays behind other content */
+      }
+      .ql-toolbar{
+        background-color: white;
+        opacity: 0.8!important;         
+      }
+      .ql-editor{
+        background-color: white;
+        opacity: 0.8!important;  
+        min-height: 300px!important;    
       }
     </style>
   </head>
@@ -40,7 +46,7 @@
       <form id="blogForm">
         <div class="form-group pb-3">
           <label for="title" class="fs-5 fw-bold text-dkgray text-shadow-black">Blog Title</label>
-          <input type="text" class="form-control border border-2 border-primary bg-white-transparent-50" maxlength="40" id="title" placeholder="Enter title">
+          <input type="text" class="form-control border border-2 border-primary" style="opacity:0.8;" maxlength="40" id="title" placeholder="Enter title">
         </div>
         <div class="form-group pb-3">
           <label for="content" class="fs-5 fw-bold text-dkgray text-shadow-black">Blog Entry</label>
@@ -78,7 +84,7 @@
               <button class="ql-link"></button>
             </span>
           </div>
-          <div id="editor" class="border border-3 border-primary rounded bg-white-transparent-50" style="height: 300px;"></div>
+          <div id="editor" class="border border-3 border-primary rounded bg-white-transparent-50"></div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
