--- a/views/bloglist.ejs
+++ b/views/bloglist.ejs
@@ -3,6 +3,21 @@
   <head>
     <%- include('./partials/head.ejs') %>
     <%- include('./partials/head-scripts.ejs') %>
+    <style>
+      body::before {
+          content: "";
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          z-index: -1; /* Ensure it stays behind other content */
+          background: url('/images/blogentry.svg') no-repeat;
+          background-size: cover;
+          background-position: center 33%;
+          opacity: 0.1;
+      }
+    </style>
   </head>
 
   <body>
