--- a/views/blogview.ejs
+++ b/views/blogview.ejs
@@ -6,12 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <style>
-      body {
-        background-color: #f5efe6;
-      }
       body::before {
         content: "";
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
@@ -19,7 +16,7 @@
         background: url('/images/blogentry.svg') no-repeat;
         background-size: cover;
         background-position: center 33%;
-        opacity: 0.20; /* Adjust the value as needed */
+        opacity: 0.10; /* Adjust the value as needed */
         z-index: -1; /* Ensure it stays behind other content */
       }
       .ql-container {
