--- a/views/heart.ejs
+++ b/views/heart.ejs
@@ -9,15 +9,15 @@
         background-color: #ac9466;
       }
       body::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url('/images/jesus.svg') center/cover no-repeat;
-        opacity: 0.5; /* Adjust the value as needed */
-        z-index: -1; /* Ensure it stays behind other content */
+          content: "";
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          z-index: -1; /* Ensure it stays behind other content */
+          background: url('/images/jesus.svg') center/cover no-repeat;
+          opacity: 0.4;
       }
     </style>    
   </head>
