--- a/views/categorieslist.ejs
+++ b/views/categorieslist.ejs
@@ -6,6 +6,7 @@
     <style>
       body{
         background-color: #e7d8bb;
+        position: relative; /* Ensure layering works properly */
       }
       body::before {
         content: "";
