--- a/views/blogview.ejs
+++ b/views/blogview.ejs
@@ -6,6 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <style>
+      body {
+        position: relative; /* Ensure layering works properly */
+      }
       body::before {
         content: "";
         position: fixed;
