--- a/views/heart.ejs
+++ b/views/heart.ejs
@@ -7,6 +7,7 @@
     <style>
       body{
         background-color: #ac9466;
+        position: relative; /* Ensure layering works properly */
       }
       body::before {
           content: "";
