--- a/views/blogentry.ejs
+++ b/views/blogentry.ejs
@@ -3,16 +3,12 @@
   <head>
     <%- include('./partials/head.ejs') %>
     <%- include('./partials/head-scripts.ejs') %>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-     <!-- Include stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet">
-    <!-- Include your favorite highlight.js stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css" rel="stylesheet">
     <style>
       .ql-editor {
         background-color: white;
         min-height: 300px;
-        opacity: 0.8 !important;
+        opacity: 0.7 !important;
       }
       .border-top-start-end-2 {
         /* Top, left, and right borders: 3px solid blue */
@@ -23,30 +19,30 @@
       body {
         position: relative; /* Ensure layering works properly */
       }
-      body::before {
-        content: "";
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url('/images/blogentry.svg') no-repeat;
-        background-size: cover;
-        background-position: center 33%;
-        opacity: 0.10; /* Adjust the value as needed */
-        z-index: -1; /* Ensure it stays behind other content */
-      };
+      .blog-background {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100vw;
+          height: 100vh;
+          background-image: url("/images/blog/backgrounds/<%-blogData.imageName%>.svg");
+          background-size: <%-blogData.fillStyle%>;
+          background-repeat: no-repeat;
+          background-position: center center;
+          opacity: <%-blogData.opacity%>;
+      }
     </style>    
   </head>
 
-  <body>
+  <body style="background-color: <%-blogData.backColor%>">
+    <div id="blog-background" class="blog-background"></div>    
     <%- include('./partials/nav.ejs') %>
-    <div class="container align-content-center justify-content-center mt-5" style="max-width: 1000px;">
+    <div class="container align-content-center justify-content-center mt-5" style="position:relative;max-width: 1000px;">
       <div class="fs-2 fw-bold text-center text-black text-shadow-black">Creating A New Blog Entry: <%=blogData.username%></div>
       <form id="blogForm">
         <div class="form-group pb-3">
           <label for="title" class="fs-5 fw-bold text-dkgray text-shadow-black">Blog Title</label>
-          <input type="text" class="form-control border border-2 border-primary" style="opacity:0.8;" maxlength="40" id="title" placeholder="Enter title">
+          <input type="text" class="form-control border border-2 border-primary" style="opacity:0.7;" maxlength="40" id="title" placeholder="Enter title">
         </div>
         <div class="form-group pb-3">
           <label for="content" class="fs-5 fw-bold text-dkgray text-shadow-black">Blog Entry</label>
@@ -86,13 +82,52 @@
           </div>
           <div id="editor" class="border border-3 border-primary rounded bg-white-transparent-50"></div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="form-group pb-3 align-items-center text-center">
+          <div class="mx-2" style="display:inline-block">
+            <label for="backcolor" class="fs-5 fw-bold text-dkgray text-shadow-black">Color:</label>
+            <input type="color" id="backcolor" onchange="changeBackColor(this)" value=<%-blogData.backColor%>>
+          </div>
+          <div class="mx-2" style="display:inline-block">
+            <label for="back-image" class="fs-5 fw-bold text-dkgray text-shadow-black">Image:</label>
+            <div class="dropdown" id="back-image" style="display:inline-flex;">
+              <input type="text" id="backimage" value="<%-blogData.imageName%>" class="" style="cursor:pointer;pointer-events:none;max-width:100px;" readonly>
+              <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Image List</span>
+              </button>
+              <ul id="back-image-list" class="dropdown-menu dropdown-menu-end" style="max-height: 250px; overflow-y: auto;">
+                <li><a style="cursor:pointer;user-select:none;" class="dropdown-item" onclick="changeBackImage(this)" data-value="">None</a></li>
+              <%blogBackImage.forEach(function(backImage, i, arr){-%>
+                <li><a style="cursor:pointer;user-select:none;" class="dropdown-item" onclick="changeBackImage(this)" data-value="<%-backImage.name%>"><img src="/images/blog/backgrounds/<%-backImage.fileName%>" style="max-width:100px;max-height:auto"><%-backImage.name%></a></li>
+              <%});-%>
+              </ul>
+            </div>
+          </div>
+          <div class="mx-2" style="display:inline-block">
+            <label for="fill-style" class="fs-5 fw-bold text-dkgray text-shadow-black">Fill:</label>
+            <div class="dropdown" id="fill-style" style="display:inline-flex;">
+              <input type="text" id="fillstyle" value="Preset" data-value="<%-blogData.fillStyle%>" class="" style="cursor:pointer;pointer-events:none;max-width:100px;" readonly>
+              <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Fill Styles</span>
+              </button>
+              <ul id="fill-style-list" class="dropdown-menu dropdown-menu-end" style="max-height: 250px; overflow-y: auto;">
+                <li><a style="cursor:pointer;user-select:none;" class="dropdown-item" onclick="changeFillStyle(this)" data-name="Contain" data-value="contain">Contain</a></li>
+                <li><a style="cursor:pointer;user-select:none;" class="dropdown-item" onclick="changeFillStyle(this)" data-name="Cover" data-value="cover">Cover</a></li>
+                <li><a style="cursor:pointer;user-select:none;" class="dropdown-item" onclick="changeFillStyle(this)" data-name="Stretch" data-value="100vw 100vh">Stretch</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="mx-2" style="display:inline-block">
+            <label for="imageopacity" class="fs-5 fw-bold text-dkgray text-shadow-black">Opacity:</label>
+            <input type="range" id="imageopacity" onchange="changeBackImageOpacity(this)" min="0.05" max="1" step="0.05" value="<%-blogData.opacity%>">
+          </div>
+        </div>
+        <div class="form-group pb-3 align-items-end text-end">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
       </form>
     </div>
-
-    <%- include('./partials/body-script.ejs') %>
     <!-- Include the highlight.js library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>  
     <!-- Include the Quill library -->
     <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
     <script>
@@ -100,34 +135,68 @@
       const g_blogData = <%-JSON.stringify(blogData)%>;
       const g_blogContent = "<%=blogData.content%>";
 
+      
       function decodeHtml(html) {
         var txt = document.createElement("textarea");
         txt.innerHTML = html;
         return txt.value;
       }
 
-      // Initialize Quill editor
-      var quill = new Quill('#editor', 
-      { 
-        modules: 
-        {
-          syntax: true,
-          toolbar: '#toolbar-container'
-        },
-        placeholder: 'Blog Entry',
-        theme: 'snow'
-      });
+      function changeBackColor(colorElement){
+        const blogBackGround = document.getElementById("blog-background");
+        document.body.style.backgroundColor = colorElement.value;
+      }
+
+      function changeBackImage(selectElement){
+        const imageName = selectElement.dataset.value;
+        const blogBackGround = document.getElementById("blog-background");
+        const selectBackImage = document.getElementById("backimage");
+
+        selectBackImage.value = imageName;
+        
+        if ( imageName == "none" ){
+          blogBackGround.style.backgroundImage = "";
+          return;
+        }
+
+        //fetch image from: /images/blog/backgrounds/
+        const imageFile = `/images/blog/backgrounds/${imageName}.svg`;
+
+        blogBackGround.style.backgroundImage = `url(${imageFile})`;
+      }
+
+      function changeFillStyle(selectElement){
+        const fillStyle = selectElement.dataset.value;
+        const fillName = selectElement.dataset.name;
+        const blogBackGround = document.getElementById("blog-background");
+        const selectFillStyle = document.getElementById("fillstyle");
+
+        blogBackGround.style.backgroundSize = fillStyle;
+        selectFillStyle.value = fillName;
+        selectFillStyle.dataset.value = fillStyle;
+      }
+
+      function changeBackImageOpacity(valueElement){
+        const blogBackGround = document.getElementById("blog-background");
+        blogBackGround.style.opacity = `${valueElement.value}`;
+      }
 
       // Handle form submission
       document.getElementById('blogForm').addEventListener('submit', function(event) {
         event.preventDefault();
         var title = document.getElementById('title').value;
         var content = quill.root.innerHTML;
+        var backcolor = document.getElementById('backcolor').value;
+        var imagename = document.getElementById('backimage').value;
+        var fillstyle = document.getElementById('fillstyle').dataset.value;
+        var opacity = document.getElementById('imageopacity').value;
         var formData = new FormData();
         formData.append('title', title);
         formData.append('content', content);
-        formData.append('backstyle', '0');
-        formData.append('backcolor', 'none');
+        formData.append('backcolor', backcolor);
+        formData.append('imagename', imagename);
+        formData.append('fillstyle', fillstyle);
+        formData.append('opacity', opacity);
 
         //console.log(`formData being submitted:`);
         //console.log(formData);
@@ -151,12 +220,28 @@
         }); //end of ajax submit
       }); //end of addEventListener
 
+      ////////////////////////////////////////////
+      // start of running code
+      ////////////////////////////////////////////
+      // Initialize Quill editor
+      var quill = new Quill('#editor', 
+      { 
+        modules: 
+        {
+          syntax: true,
+          toolbar: '#toolbar-container'
+        },
+        placeholder: 'Blog Entry',
+        theme: 'snow'
+      });
+
       // Check to see if a 'New' entry or a title was already provided
       if ( g_blogData.id != 'New' || g_blogData.title != "" ){
         const editTitle = document.getElementById('title');
         editTitle.value = g_blogData.title;
         quill.clipboard.dangerouslyPasteHTML(decodeHtml(g_blogContent));
       }
+
     </script>
     <%- include('./partials/body-script.ejs') %>
     <%- include('./partials/footer.ejs') %>
