--- a/views/bloglist.ejs
+++ b/views/bloglist.ejs
@@ -7,25 +7,25 @@
       body {
         position: relative; /* Ensure layering works properly */
       }
-      body::before {
-          content: "";
+      .blog-background {
           position: fixed;
           top: 0;
           left: 0;
-          width: 100%;
-          height: 100%;
-          z-index: -1; /* Ensure it stays behind other content */
-          background: url('/images/blogentry.svg') no-repeat;
+          width: 100vw;
+          height: 100vh;
+          background-image: url("/images/blog/backgrounds/default.svg");
           background-size: cover;
-          background-position: center 33%;
-          opacity: 0.10;
+          background-repeat: no-repeat;
+          background-position: center center;
+          opacity: 0.05;
       }
     </style>
   </head>
 
   <body>
+    <div id="blog-background" class="blog-background"></div>    
     <%- include('./partials/nav.ejs')  %>
-    <div class="container justify-content-center">
+    <div class="container justify-content-center" style="position:relative;">
       <div class="row justify-content-center">
         <div class="fs-1 text-center text-dkgray text-shadow-black">
           User Blogs
