--- a/views/blogview.ejs
+++ b/views/blogview.ejs
@@ -6,21 +6,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <style>
-      body {
-        position: relative; /* Ensure layering works properly */
-      }
-      body::before {
-        content: "";
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url('/images/blogentry.svg') no-repeat;
-        background-size: cover;
-        background-position: center 33%;
-        opacity: 0.10; /* Adjust the value as needed */
-        z-index: -1; /* Ensure it stays behind other content */
+      .blog-background {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100vw;
+          height: 100vh;
+          background-image: url("/images/blog/backgrounds/<%-blogData.imageName%>.svg");
+          background-size: <%-blogData.fillStyle%>;
+          background-repeat: no-repeat;
+          background-position: center center;
+          opacity: <%-blogData.opacity%>;
       }
       .ql-container {
           border: none!important; 
@@ -33,9 +29,10 @@
     </style>
   </head>
 
-  <body>
+  <body style="background-color: <%-blogData.backColor%>">
+    <div id="blog-background" class="blog-background"></div>    
     <%- include('./partials/nav.ejs') %>
-    <div class="container align-content-center justify-content-center mt-5" style="max-width: 1000px;">
+    <div class="container align-content-center justify-content-center mt-5" style="position:relative;max-width: 1000px;">
       <div class="row">
         <div class="text-center h1"><%=blogData.title%></div>
       </div>
