--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,3 +1,4 @@
+<!------------ start of navbar header ---------------->
 <header>
   <nav class="navbar navbar-dark bg-dark fixed-top position-relative">
     <div class="container-fluid d-flex flex-row">
@@ -40,7 +41,7 @@
             </li>
           </ul>
         </div>
-        <!-------------------------- Sign In / Out Code -------------------------------------->
+        <!-------------------------- Sign In / Out Footer -------------------------------------->
         <div class="offcanvas-footer">
           <ul class="navbar-nav justify-content-center text-center align-content-center align-items-end row">
             <div class="d-flex justify-content-center align-items-start">
@@ -59,7 +60,7 @@
             </div>
           </ul>
         </div>
-        <!-------------------------- END of Sign In / Out Code ------------------------------->
+        <!-------------------------- END of Sign In / Out Footer ------------------------------->
       </div>
     </div>
   </nav>
@@ -86,3 +87,4 @@
   </script>
   <!--------- Sign In Script For Nicety -------->
 </header>
+<!------------ end of navbar header ---------------->
